# bazaar

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CONTRIBUTING.md  Justfile  README-PL.md  README.md  TODO.org  TRANSLATORS-PL.md  TRANSLATORS.md  meson.build  meson_options.txt  org.gnome.Example.json  translators.sh  version.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build-flatpak.yml
bazaar-ui/: Cargo.toml  meson.build
bazaar-ui/include/: bazaar-ui.h
bazaar-ui/src/: lib.rs  scrolled_window.rs
build-aux/flatpak/: bazaar-launcher.sh  io.github.kolunmi.Bazaar.Devel.json  io.github.kolunmi.Bazaar.Devel.yaml  io.github.kolunmi.Bazaar.json  io.github.kolunmi.Bazaar.yaml  io.github.kolunmi.bazaar.Devel.json
build-aux/rpm/: bazaar.spec
data/: io.github.kolunmi.Bazaar.desktop.in  io.github.kolunmi.Bazaar.gschema.xml  io.github.kolunmi.Bazaar.metainfo.xml.in  io.github.kolunmi.Bazaar.search-provider.ini.in  io.github.kolunmi.Bazaar.service  io.github.kolunmi.Bazaar.service.in  io.github.kolunmi.bazaar.dbus.in  io.github.kolunmi.bazaar.desktop.in  io.github.kolunmi.bazaar.gschema.xml  io.github.kolunmi.bazaar.metainfo.xml.in  io.github.kolunmi.bazaar.search-provider.ini.in  io.github.kolunmi.bazaar.service  io.github.kolunmi.bazaar.service.in  meson.build  org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
data/dbus/: io.github.kolunmi.Bazaar.SearchProvider.service.in  meson.build
data/icons/: meson.build
docs/: README.md  overview.org
po/: .gitignore  LINGUAS  POTFILES.in  ar.po  bs.po  cs.po  de.po  es.po  fa_IR.po  fr.po  id.po  it.po  ja.po  meson.build  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  uk.po  zh_CN.po  zh_TW.po
scripts/: countries.json.in  countries.py
src/: bazaar.gresource.xml  bz-addons-dialog.blp  bz-addons-dialog.c  bz-addons-dialog.h  bz-addons-dialog.ui  bz-app-tile.blp  bz-app-tile.c  bz-app-tile.h  bz-app-tile.ui  bz-application-map-factory.c  bz-application-map-factory.h  bz-application.c  bz-application.h  bz-apps-page.blp  bz-apps-page.c  bz-apps-page.h  bz-async-texture.c  bz-async-texture.h  bz-backend-notification.c  bz-backend-notification.h  bz-backend-transaction-op-payload.c  bz-backend-transaction-op-payload.h  bz-backend-transaction-op-progress-payload.c  bz-backend-transaction-op-progress-payload.h  bz-backend.c  bz-backend.h  bz-background.c  bz-background.h  bz-browse-widget.blp  bz-browse-widget.c  bz-browse-widget.h  bz-browse-widget.ui  bz-category-dialog.blp  bz-category-dialog.c  bz-category-dialog.h  bz-category-page.blp  bz-category-page.c  bz-category-page.h  bz-category-tile.blp  bz-category-tile.c  (+192 more)
src/gtk/: help-overlay.blp  help-overlay.ui  shortcuts-dialog.blp  style-dark.css  style.css  styles.css
subprojects/: libdex.wrap
